Fixed the overlap

--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -5,7 +5,7 @@
 .container {
   display: grid;
   align-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 10px;
 }
 h6 {
